07-ingress-rules/webapp-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp.<YOUR_NAME>.metakube.org
spec:
  tls:
    - hosts:
        - webapp.<YOUR_NAME>.metakube.org
  rules:
    - host: webapp.<YOUR_NAME>.metakube.org
      http:
        paths:
        - path: /
          backend:
            serviceName: webapp-svc
            servicePort: http
